--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -1,10 +1,5 @@
 version: "3"
 services:
-  toxiproxy:
-    image: shopify/toxiproxy
-    ports:
-      - "8474:8474"
-      - "21211:21211"
   memcached:
     image: memcached:alpine
     command:
@@ -14,4 +9,15 @@ services:
       - "binary"
     ports:
       - "11211-11213:11211"
-
+  toxiproxy:
+    image: shopify/toxiproxy
+    ports:
+      - "8474:8474"
+      - "21211:21211"
+  resiliency:
+    image: memcached:alpine
+    command:
+      - "memcached"
+      - "-vvv"
+      - "-B"
+      - "binary"
